[build-system]
requires = [
    "setuptools",
    "packaging",
    "wheel",
    "qutip>=5.3.0",
    "numpy",
]
build-backend = "setuptools.build_meta"

[project]
name = "qutip-cuquantum"
dynamic = ["version"]
description = "cuQuantum backend for QuTiP"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
keywords = ["quantum", "physics", "dynamics", "gpu", "linear-algebra"]
authors = [
  {name = "Eric Giguère", email = "qutip-admin@googlegroups.com"}
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Operating System :: Unix",
]
dependencies = [
    "qutip>=5.3.0",
]

# URLs for your project
[project.urls]
Homepage = "https://qutip.org"
"Bug Tracker" = "https://github.com/qutip/qutip-cuquantum/issues"
Documentation = "https://qutip-cuquantum.readthedocs.io/en/latest/"

[project.optional-dependencies]
cuda11 = ["cupy-cuda11x", "cuquantum-python-cu11"]
cuda12 = ["cupy-cuda12x", "cuquantum-python-cu12"]
cuda13 = ["cupy-cuda13x", "cuquantum-python-cu13"]
tests = ["pytest>=6.0"]

[project.entry-points."qutip.family"]
qutip_cuquantum = "qutip_cuquantum.family"

[tool.setuptools]
packages = { find = { where = ["src"] } }
package-dir = { "" = "src" }

[tool.pytest.ini_options]
addopts = "-Werror --strict-config --strict-markers -W ignore::DeprecationWarning"
testpaths = [
    "tests",
]
