[metadata]
name = qutip-cuquantum
url = https://qutip.org
description = cuQuantum backend for QuTiP
long_description = file: README.md
long_description_content_type = text/markdown; variant=GFM
keywords = quantum, physics, dynamics, gpu, linear-algebra
license = BSD 3-Clause License
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering
    Operating System :: Unix
author = Eric Giguere
author_email = qutip-admin@googlegroups.com
platforms = Linux, Unix

[options]
package_dir =
    =src
packages = find:
include_package_data = True
install_requires =
    qutip@git+https://github.com/qutip/qutip.git  # Update next release
setup_requires =
    packaging
    qutip@git+https://github.com/qutip/qutip.git  # Update next release
    Cython
    numpy

[options.packages.find]
where = src

[options.extras_require]
cuda11 =
    cupy-cuda11x
    cuquantum-python-cu11
cuda12 =
    cupy-cuda12x
    cuquantum-python-cu12
tests =
    pytest>=6.0

[options.entry_points]
qutip.family =
    qutip_cuquantum = qutip_cuquantum.family
